@@ -1,3 +1,7 @@
+* Sep 24 2000 hship
+
+[115140] Home service must validate()
+
 * Sep 13 2000 hship
 
 [114017] Rollovers no longer compatible with Navigator 
